Fix product word-wrap & update media queries for better mobile

--- a/crates/web/assets/styling/main.scss
+++ b/crates/web/assets/styling/main.scss
@@ -142,6 +142,7 @@ button.green {
         }
     }
 }
+
 .product-images{
     display: flex;
     align-items: start;
@@ -182,6 +183,7 @@ button.green {
         }
     }
 }
+
 .product {
     background-color: white;
     padding:1rem;
@@ -195,12 +197,10 @@ button.green {
         margin-right: 1rem;
     }
     p {
+        white-space: pre-wrap;
         max-width: 700px;
     }
 }
-
-
-
 .category-bar 
 {
     margin-bottom: 0.5rem;
@@ -212,7 +212,6 @@ button.green {
 
     }
 }
-
 .category-showcase 
 {
    > h2 {
@@ -254,14 +253,12 @@ button.green {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
 }
 
 .product-highlight {
     background-color: defines.$coolors1;
     color:defines.$coolors4 !important;
     display: flex;
-    max-height: 40vh;
     text-align: center;
     border-radius: 2rem;
     cursor: pointer;
@@ -274,6 +271,7 @@ button.green {
     }
     img 
     {
+        max-height: 40vh;
         border-radius: 1.5rem;
         max-width: 100%;
         max-height: 100%;
@@ -286,8 +284,6 @@ button.green {
             background-clip: text; 
         }
         padding:2rem;
-
-
     }
     margin-top: 2rem;
     padding:1rem;
@@ -311,7 +307,6 @@ button.green {
 }
 
 .about {
-    
     padding:1rem;
     max-width: 800px;
     margin-left: auto;
